--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "node-schedule": "^1.2.0",
     "rc": "1.0.1",
     "sails": "~0.12.7",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-hook-schedule": "^0.2.2",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "debug": "node debug app.js",
