--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.7",
     "sails-disk": "~0.10.9",
+    "sails-hook-email": "^0.12.1",
     "sails-hook-schedule": "^0.2.2",
     "xmlhttprequest": "^1.8.0"
   },
